2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c: use canonical property names.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/raw.c
	* plug-ins/gfig/gfig-dialog.c 
	* plug-ins/helpbrowser/dialog.c
	* plug-ins/imagemap/imap_browse.c
	* plug-ins/print/gimp_main_window.c: use canonical signal names.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.[ch]
	* libgimp/gimpzoompreview.c: reduced code duplication by exporting
	two GimpDrawablePreview functions for internal use.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_area_event): fixed check that suppresses
	the redraw for motion events that don't cause the preview to scroll.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: applied a patch from Dennis
	Bjorklund that prevents a possible division by zero and fixes the
	calculation of the center point.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-gui.c
	* app/widgets/gimptoolbox.c: use GIMP_ACRONYM.

	* app/main.c (gimp_show_version): use GIMP_NAME.

	* app/about.h (GIMP_LICENSE): s/This program/GIMP/g

2006-02-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: added const qualifier.

2006-02-06  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.c: connect-after to "realize" and
	"size-allocate" signals of the preview area and call the
	set-cursor method from the callback.

	* libgimpwidgets/gimpscrolledpreview.c: no need to explicitely set
	the cursor now that the virtual method is used correctly.

	* libgimp/gimpzoompreview.c: implement set-cursor and set the move
	cursor in accordance with the zoom factor.

2006-02-06  DindinX  <dindinx@gimp.org>

	* plug-ins/common/mblur.c: length should at least be 1, or the zoom
	mode will produce garbage. length==0 is useless in other modes.
	(reported by daelstorm on freenode/#gimp)

2006-02-03  Jay Cox  <jaycox@gimp.org>
